# SAFER

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
control_lib/: Anafi_control_node.py
src/cmd_vel_flight_plugin/: CMakeLists.txt  package.xml
src/cmd_vel_flight_plugin/src/: CmdVelFlightPlugin.cc
src/control/: package.xml
src/control/control/: ergodic_inspection_node.py  gazebo_pose_to_odom.py
src/control/launch/: sim.launch.py
src/vision/: package.xml  setup.py
src/vision/vision/: person_fire_detector.py  person_fire_update.py
